Fixes up some minor issues.